After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749525 - pyramidsegment: wrong value of level property
pyramidsegment: wrong value of level property
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-18 05:30 UTC by Vineeth
Modified: 2015-05-18 07:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
fix minimum value of level. (1.24 KB, patch)
2015-05-18 05:30 UTC, Vineeth
committed Details | Review

Description Vineeth 2015-05-18 05:30:10 UTC
The property level has a minimum value of 0. But when we set the level as 0,
 it gets an assertion error. The function icvPyrSegmentation8uC3R returns false
 if level is set as 0, since the minimum level cant be 0 and thus results in error.
 Hence changing the minimum value to 1.
Comment 1 Vineeth 2015-05-18 05:30:55 UTC
Created attachment 303502 [details] [review]
fix minimum value of level.
Comment 2 Sebastian Dröge (slomo) 2015-05-18 07:48:07 UTC
commit 8df641016e5eec2b5b3b1bc97704c10551a4f71f
Author: Vineeth T M <vineeth.tm@samsung.com>
Date:   Mon May 18 14:30:19 2015 +0900

    pyramidsegment: wrong value of level property
    
    The property level has a minimum value of 0. But when we set the level as 0,
    it gets an assertion error. The function icvPyrSegmentation8uC3R returns false
    if level is set as 0, since the minimum level cant be 0 and thus results in error.
    Hence changing the minimum value to 1.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=749525